src/main/java/com/grakra/failpoint/inject/FailPointParser.java
// Generated from com/grakra/failpoint/inject/FailPointParser.g4 by ANTLR 4.7.1
package com.grakra.failpoint.inject;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class FailPointParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ImportLine_Prefix=1, IncludeLine_Prefix=2, BlankLine=3, NonBlankLine_Prefix=4, 
		FailPointLine_Prefix=5, ImportLine_Ws=6, ImportLine_Static=7, ImportLine_Package=8, 
		ImportLine_Terminator=9, IncludeLine_Ws=10, IncludeLine_Sep=11, IncludeLine_Header=12, 
		IncludeLine_Terminator=13, NonBlankLine_Suffix=14, FailPointLine_Terminator=15, 
		Sep=16, Equal=17, IngoreWs=18, BooleanType=19, StringType=20, IntegerType=21, 
		FloatType=22, BooleanLiteral=23, StringLiteral=24, IntegerLiteral=25, 
		FloatLiteral=26, Name=27, LeadingSpace=28, CommentedCode_Prefix=29, NonCommentedCode=30, 
		CommentedCode_Suffix=31;
	public static final int
		RULE_file = 0, RULE_file_content = 1, RULE_non_failpoint_line = 2, RULE_regular_line = 3, 
		RULE_external_dependentency = 4, RULE_blank_line = 5, RULE_non_blank_line = 6, 
		RULE_import_line = 7, RULE_import_package = 8, RULE_include_line = 9, 
		RULE_include_header = 10, RULE_failpoint_block = 11, RULE_failpoint_begin_line = 12, 
		RULE_commented_code_line = 13, RULE_failpoint_end_line = 14, RULE_leading_space = 15, 
		RULE_code = 16, RULE_failpoint_declare = 17, RULE_type = 18, RULE_default_literal = 19, 
		RULE_var = 20;
	public static final String[] ruleNames = {
		"file", "file_content", "non_failpoint_line", "regular_line", "external_dependentency", 
		"blank_line", "non_blank_line", "import_line", "import_package", "include_line", 
		"include_header", "failpoint_block", "failpoint_begin_line", "commented_code_line", 
		"failpoint_end_line", "leading_space", "code", "failpoint_declare", "type", 
		"default_literal", "var"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, "'static'", null, null, null, 
		null, null, null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ImportLine_Prefix", "IncludeLine_Prefix", "BlankLine", "NonBlankLine_Prefix", 
		"FailPointLine_Prefix", "ImportLine_Ws", "ImportLine_Static", "ImportLine_Package", 
		"ImportLine_Terminator", "IncludeLine_Ws", "IncludeLine_Sep", "IncludeLine_Header", 
		"IncludeLine_Terminator", "NonBlankLine_Suffix", "FailPointLine_Terminator", 
		"Sep", "Equal", "IngoreWs", "BooleanType", "StringType", "IntegerType", 
		"FloatType", "BooleanLiteral", "StringLiteral", "IntegerLiteral", "FloatLiteral", 
		"Name", "LeadingSpace", "CommentedCode_Prefix", "NonCommentedCode", "CommentedCode_Suffix"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FailPointParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FailPointParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public File_contentContext file_content() {
			return getRuleContext(File_contentContext.class,0);
		}
		public TerminalNode EOF() { return getToken(FailPointParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			file_content();
			setState(43);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class File_contentContext extends ParserRuleContext {
		public List<Non_failpoint_lineContext> non_failpoint_line() {
			return getRuleContexts(Non_failpoint_lineContext.class);
		}
		public Non_failpoint_lineContext non_failpoint_line(int i) {
			return getRuleContext(Non_failpoint_lineContext.class,i);
		}
		public List<Failpoint_blockContext> failpoint_block() {
			return getRuleContexts(Failpoint_blockContext.class);
		}
		public Failpoint_blockContext failpoint_block(int i) {
			return getRuleContext(Failpoint_blockContext.class,i);
		}
		public File_contentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_content; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterFile_content(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitFile_content(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitFile_content(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_contentContext file_content() throws RecognitionException {
		File_contentContext _localctx = new File_contentContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_content);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45);
				non_failpoint_line();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ImportLine_Prefix) | (1L << IncludeLine_Prefix) | (1L << BlankLine) | (1L << NonBlankLine_Prefix) | (1L << LeadingSpace) | (1L << NonCommentedCode))) != 0) );
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FailPointLine_Prefix) {
				{
				{
				setState(51); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(50);
						failpoint_block();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(53); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << ImportLine_Prefix) | (1L << IncludeLine_Prefix) | (1L << BlankLine) | (1L << NonBlankLine_Prefix) | (1L << LeadingSpace) | (1L << NonCommentedCode))) != 0)) {
					{
					{
					setState(55);
					non_failpoint_line();
					}
					}
					setState(60);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_failpoint_lineContext extends ParserRuleContext {
		public Regular_lineContext regular_line() {
			return getRuleContext(Regular_lineContext.class,0);
		}
		public External_dependentencyContext external_dependentency() {
			return getRuleContext(External_dependentencyContext.class,0);
		}
		public Non_failpoint_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_failpoint_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterNon_failpoint_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitNon_failpoint_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitNon_failpoint_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_failpoint_lineContext non_failpoint_line() throws RecognitionException {
		Non_failpoint_lineContext _localctx = new Non_failpoint_lineContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_non_failpoint_line);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BlankLine:
			case NonBlankLine_Prefix:
			case LeadingSpace:
			case NonCommentedCode:
				enterOuterAlt(_localctx, 1);
				{
				setState(66);
				regular_line();
				}
				break;
			case ImportLine_Prefix:
			case IncludeLine_Prefix:
				enterOuterAlt(_localctx, 2);
				{
				setState(67);
				external_dependentency();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Regular_lineContext extends ParserRuleContext {
		public Blank_lineContext blank_line() {
			return getRuleContext(Blank_lineContext.class,0);
		}
		public Non_blank_lineContext non_blank_line() {
			return getRuleContext(Non_blank_lineContext.class,0);
		}
		public Failpoint_end_lineContext failpoint_end_line() {
			return getRuleContext(Failpoint_end_lineContext.class,0);
		}
		public Regular_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regular_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterRegular_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitRegular_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitRegular_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Regular_lineContext regular_line() throws RecognitionException {
		Regular_lineContext _localctx = new Regular_lineContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_regular_line);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BlankLine:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				blank_line();
				}
				break;
			case NonBlankLine_Prefix:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				non_blank_line();
				}
				break;
			case LeadingSpace:
			case NonCommentedCode:
				enterOuterAlt(_localctx, 3);
				{
				setState(72);
				failpoint_end_line();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class External_dependentencyContext extends ParserRuleContext {
		public Import_lineContext import_line() {
			return getRuleContext(Import_lineContext.class,0);
		}
		public Include_lineContext include_line() {
			return getRuleContext(Include_lineContext.class,0);
		}
		public External_dependentencyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_dependentency; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterExternal_dependentency(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitExternal_dependentency(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitExternal_dependentency(this);
			else return visitor.visitChildren(this);
		}
	}

	public final External_dependentencyContext external_dependentency() throws RecognitionException {
		External_dependentencyContext _localctx = new External_dependentencyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_external_dependentency);
		try {
			setState(77);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ImportLine_Prefix:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				import_line();
				}
				break;
			case IncludeLine_Prefix:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				include_line();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Blank_lineContext extends ParserRuleContext {
		public TerminalNode BlankLine() { return getToken(FailPointParser.BlankLine, 0); }
		public Blank_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blank_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterBlank_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitBlank_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitBlank_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Blank_lineContext blank_line() throws RecognitionException {
		Blank_lineContext _localctx = new Blank_lineContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_blank_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			match(BlankLine);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Non_blank_lineContext extends ParserRuleContext {
		public TerminalNode NonBlankLine_Prefix() { return getToken(FailPointParser.NonBlankLine_Prefix, 0); }
		public TerminalNode NonBlankLine_Suffix() { return getToken(FailPointParser.NonBlankLine_Suffix, 0); }
		public Non_blank_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_non_blank_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterNon_blank_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitNon_blank_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitNon_blank_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Non_blank_lineContext non_blank_line() throws RecognitionException {
		Non_blank_lineContext _localctx = new Non_blank_lineContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_non_blank_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(NonBlankLine_Prefix);
			setState(82);
			match(NonBlankLine_Suffix);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_lineContext extends ParserRuleContext {
		public TerminalNode ImportLine_Prefix() { return getToken(FailPointParser.ImportLine_Prefix, 0); }
		public Import_packageContext import_package() {
			return getRuleContext(Import_packageContext.class,0);
		}
		public TerminalNode ImportLine_Terminator() { return getToken(FailPointParser.ImportLine_Terminator, 0); }
		public List<TerminalNode> ImportLine_Ws() { return getTokens(FailPointParser.ImportLine_Ws); }
		public TerminalNode ImportLine_Ws(int i) {
			return getToken(FailPointParser.ImportLine_Ws, i);
		}
		public TerminalNode ImportLine_Static() { return getToken(FailPointParser.ImportLine_Static, 0); }
		public Import_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterImport_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitImport_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitImport_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_lineContext import_line() throws RecognitionException {
		Import_lineContext _localctx = new Import_lineContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_import_line);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(ImportLine_Prefix);
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(85);
					match(ImportLine_Ws);
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			setState(92);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ImportLine_Static) {
				{
				setState(91);
				match(ImportLine_Static);
				}
			}

			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ImportLine_Ws) {
				{
				{
				setState(94);
				match(ImportLine_Ws);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			import_package();
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ImportLine_Ws) {
				{
				{
				setState(101);
				match(ImportLine_Ws);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(ImportLine_Terminator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Import_packageContext extends ParserRuleContext {
		public TerminalNode ImportLine_Package() { return getToken(FailPointParser.ImportLine_Package, 0); }
		public Import_packageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_package; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterImport_package(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitImport_package(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitImport_package(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_packageContext import_package() throws RecognitionException {
		Import_packageContext _localctx = new Import_packageContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_import_package);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(ImportLine_Package);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_lineContext extends ParserRuleContext {
		public TerminalNode IncludeLine_Prefix() { return getToken(FailPointParser.IncludeLine_Prefix, 0); }
		public List<TerminalNode> IncludeLine_Sep() { return getTokens(FailPointParser.IncludeLine_Sep); }
		public TerminalNode IncludeLine_Sep(int i) {
			return getToken(FailPointParser.IncludeLine_Sep, i);
		}
		public Include_headerContext include_header() {
			return getRuleContext(Include_headerContext.class,0);
		}
		public TerminalNode IncludeLine_Terminator() { return getToken(FailPointParser.IncludeLine_Terminator, 0); }
		public List<TerminalNode> IncludeLine_Ws() { return getTokens(FailPointParser.IncludeLine_Ws); }
		public TerminalNode IncludeLine_Ws(int i) {
			return getToken(FailPointParser.IncludeLine_Ws, i);
		}
		public Include_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterInclude_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitInclude_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitInclude_line(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Include_lineContext include_line() throws RecognitionException {
		Include_lineContext _localctx = new Include_lineContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_include_line);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(IncludeLine_Prefix);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IncludeLine_Ws) {
				{
				{
				setState(112);
				match(IncludeLine_Ws);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(IncludeLine_Sep);
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IncludeLine_Ws) {
				{
				{
				setState(119);
				match(IncludeLine_Ws);
				}
				}
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125);
			include_header();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IncludeLine_Ws) {
				{
				{
				setState(126);
				match(IncludeLine_Ws);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(132);
			match(IncludeLine_Sep);
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IncludeLine_Ws) {
				{
				{
				setState(133);
				match(IncludeLine_Ws);
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(IncludeLine_Terminator);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Include_headerContext extends ParserRuleContext {
		public TerminalNode IncludeLine_Header() { return getToken(FailPointParser.IncludeLine_Header, 0); }
		public Include_headerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_include_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterInclude_header(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitInclude_header(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitInclude_header(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Include_headerContext include_header() throws RecognitionException {
		Include_headerContext _localctx = new Include_headerContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_include_header);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(IncludeLine_Header);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Failpoint_blockContext extends ParserRuleContext {
		public Failpoint_begin_lineContext failpoint_begin_line() {
			return getRuleContext(Failpoint_begin_lineContext.class,0);
		}
		public List<Commented_code_lineContext> commented_code_line() {
			return getRuleContexts(Commented_code_lineContext.class);
		}
		public Commented_code_lineContext commented_code_line(int i) {
			return getRuleContext(Commented_code_lineContext.class,i);
		}
		public Failpoint_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_failpoint_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterFailpoint_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitFailpoint_block(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitFailpoint_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Failpoint_blockContext failpoint_block() throws RecognitionException {
		Failpoint_blockContext _localctx = new Failpoint_blockContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_failpoint_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			failpoint_begin_line();
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(144);
					commented_code_line();
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Failpoint_begin_lineContext extends ParserRuleContext {
		public TerminalNode FailPointLine_Prefix() { return getToken(FailPointParser.FailPointLine_Prefix, 0); }
		public TerminalNode Sep() { return getToken(FailPointParser.Sep, 0); }
		public Failpoint_declareContext failpoint_declare() {
			return getRuleContext(Failpoint_declareContext.class,0);
		}
		public TerminalNode FailPointLine_Terminator() { return getToken(FailPointParser.FailPointLine_Terminator, 0); }
		public Failpoint_begin_lineContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_failpoint_begin_line; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).enterFailpoint_begin_line(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FailPointParserListener ) ((FailPointParserListener)listener).exitFailpoint_begin_line(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FailPointParserVisitor ) return ((FailPointParserVisitor<? extends T>)visitor).visitFailpoint_begin_line(this);
			else return visitor.visitChildren(this);
		}
	}
